Changelog
=========

1.0.3 (unreleased)
------------------

- Nothing changed yet.


1.0.2 (2016-08-19)
------------------

- Do not obfuscate mails when called from Ajax, because we don't know if they
  will be de-obfuscated and that the goal is to fool non-Javascript robots
  [laulaz]


1.0.1 (2015-02-03)
------------------

- Add metadata.xml into profile.
  [bsuttor]

- Decode utf8 if accent in mail
  [bsuttor]

- Add upgradestep for import new metadata.xml
  [bsuttor]


1.0 (2014-10-22)
----------------

- Obfuscate plain text mails (#8)
  [laulaz]

- Avoid touching mailto tags content (#4)
  [laulaz]

- Avoid trying to transform non-HTML requests
  [laulaz]

- Handle links with subject and / or body (#1)
  [laulaz]

- Fix check for anonymous (#2) and for portal url (#3)
  [laulaz]

- Fix getSite location
  [laulaz]

- Add tests
  [laulaz]

- Add buildout and bootstrap
  [laulaz]


1.0a3 (2012-08-03)
------------------

- Fix check for anonymous
  [pbauer]


1.0a2 (2010-11-24)
-------------------

- Fixed broken uploaded file to pypi


1.0a1 (2010-10-22)
-------------------

- Initial release