@@ -4,7 +4,8 @@ Changelog
 1.0.3 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Do not obfuscate mails inside textarea or value="" attribute (#15)
+  [laulaz]
 
 
 1.0.2 (2016-08-19)
